upcoming page added

--- a/public/contact.html
+++ b/public/contact.html
@@ -21,18 +21,18 @@
         <img src="images/bkp-nepal-logo.svg" alt="" srcset="">
       </a>
       <nav class="hidden lg:block">
-        <ul class="flex items-center text-sm uppercase space-x-2 text-gray-800">
-          <li><a class="transition duration-200 ease-in hover:bg-brand-800 hover:text-white py-6 px-3"
-              href="#">Home</a></li>
-          <li><a class="transition duration-200 ease-in hover:bg-brand-800 hover:text-white py-6 px-3"
+        <ul class="flex items-center text-sm uppercase space-x-0 text-gray-800">
+          <li><a class="nav-links"
+              href="/">Home</a></li>
+          <li><a class="nav-links"
               href="#">Action Plan</a></li>
-          <li><a class="transition duration-200 ease-in hover:bg-brand-800 hover:text-white py-6 px-3"
+          <li><a class="nav-links"
               href="#">Membership Type</a></li>
-          <li><a class="transition duration-200 ease-in hover:bg-brand-800 hover:text-white py-6 px-3"
-              href="#">Upcoming Projects</a></li>
-          <li><a class="transition duration-200 ease-in hover:bg-brand-800 hover:text-white py-6 px-3"
-              href="#">About us</a></li>
-          <li><a class="transition duration-200 ease-in hover:bg-brand-800 hover:text-white py-6 px-3"
+          <li><a class="nav-links"
+              href="upcoming-projects.html">Upcoming Projects</a></li>
+          <li><a class="nav-links"
+              href="about.html">About us</a></li>
+          <li><a class="nav-links"
               href="contact.html">Contact us</a></li>
         </ul>
       </nav>
@@ -187,17 +187,16 @@
     <!-- end mobile off canvas side nav -->
   </div>
 
-
-  <section class="pt-32 pb-16  bg-gray-100">
+  <section class="pt-32 pb-16 bg-gray-100">
     <main class="max-w-3xl mx-auto grid sm:grid-cols-3 gap-8 p-8 min-h-96 bg-white rounded-md shadow">
-        <div class="bg-red-50 p-4 sm:p-0 rounded-md sm:bg-white flex flex-col items-start justify-center">
-          <h2 class="pb-12 text-3xl">We love to hear from you</h2>
-          <h3 class="text-xl underline decoration-gray-500 underline-offset-2">We are at</h3>
-          <p class="my-2">Butwal-11 Buddhanagar, Rupendahi , Nepal</p>
+        <div class="text-black-700 bg-red-50 p-4 sm:p-0 rounded-md sm:bg-white flex flex-col items-start justify-center">
+          <h2 class="pb-8 text-3xl">We love to hear from you</h2>
+          <h3 class="text-xl font-semibold">We are at</h3>
+          <p class="my-2">Butwal-11 Buddhanagar, Rupendahi, Nepal</p>
           <p>Call us <a class="text-gray-800 font-semibold" href="tel:+9779857039526">9857039526</a></p>
           <a class="hover:text-blue-700 hover:underline" href="mailto: administration@bkpnepal.com">administration@bkpnepal.com</a>
           <div class="flex flex-col">
-            <h3 class="text-xl my-4 underline decoration-gray-500 underline-offset-2">Reach us via</h3>
+            <h3 class="text-xl my-4 font-semibold">Reach us via</h3>
             <div class="flex flex-row gap-4">
               <!-- faccebook icon -->
               <a class="float-left" href="#" target="_blank">
@@ -221,7 +220,7 @@
           </div>
         </div>
         <div class="row-start-1 sm:ml-16 sm:row-auto sm:col-span-2">
-          <h3 class="text-2xl underline decoration-gray-500 underline-offset-2 mb-4">Message us</h3>
+          <!-- <h3 class="text-2xl underline decoration-gray-500 underline-offset-2 mb-4">Message us</h3> -->
           <form action="">
             <label class="mb-4 block" for="fullname">
               <input class="input" type="text" name="fullname" id="fullname" placeholder="Full Name" required/>
