--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   <title>BKP Nepal | Life Changing Platform </title>
 </head>
 
-<body class="bg-[#fff] font-fredoka antialiased text-gray-700">
+<body class="bg-[#fff] font-fredoka antialiased text-black-800">
   <div class="fixed z-10 w-full bg-white px-6 shadow-lg">
     <header class="h-16 max-w-5xl mx-auto flex items-center justify-between flex-wrap">
       <a class="w-[140px]" href="/">
@@ -26,9 +26,9 @@
           <li><a class="nav-links"
               href="/">Home</a></li>
           <li><a class="nav-links"
-              href="#">Action Plan</a></li>
+              href="action-plan.html">Action Plan</a></li>
           <li><a class="nav-links"
-              href="#">Membership Type</a></li>
+              href="membership-type.html">Membership Type</a></li>
           <li><a class="nav-links"
               href="upcoming-projects.html">Upcoming Projects</a></li>
           <li><a class="nav-links"
@@ -88,7 +88,7 @@
       </div>
       <nav class="mt-8 p-4 space-y-4">
         <a class="hover:bg-black-50 text-black-700 rounded-md transition-all text-lg font-medium flex items-center space-x-4 p-2"
-          href="#">
+          href="/">
           <svg class="h-6 w-6 stroke-black-700" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
               d="M2.71429 6.85652V15.2851C2.71429 15.4366 2.7745 15.582 2.88166 15.6892C2.98883 15.7963 3.13417 15.8565 3.28572 15.8565H6.71429V10.9994C6.71429 10.7721 6.8046 10.554 6.96535 10.3933C7.12609 10.2325 7.34411 10.1422 7.57144 10.1422H10.4286C10.6559 10.1422 10.8739 10.2325 11.0347 10.3933C11.1954 10.554 11.2857 10.7721 11.2857 10.9994V15.8565H14.7143C14.8658 15.8565 15.0112 15.7963 15.1184 15.6892C15.2255 15.582 15.2857 15.4366 15.2857 15.2851V6.85652"
@@ -101,7 +101,7 @@
           <span>Home</span>
         </a>
         <a class="hover:bg-black-50 text-black-700 hover:text-black-800 rounded-md transition-all text-lg font-medium flex items-center space-x-4 p-2"
-          href="#">
+          href="action-plan.html">
           <svg class="h-6 w-6 stroke-black-700" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
               d="M9 17C13.4183 17 17 13.4183 17 9C17 4.58172 13.4183 1 9 1C4.58172 1 1 4.58172 1 9C1 13.4183 4.58172 17 9 17Z"
@@ -119,7 +119,7 @@
           <span>Action Plan</span>
         </a>
         <a class="hover:bg-black-50 text-black-700 hover:text-black-800 rounded-md transition-all text-lg font-medium flex items-center space-x-4 p-2"
-          href="#">
+          href="membership-type.html">
           <svg class="h-6 w-6 stroke-black-700" viewBox="0 0 18 14" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
               d="M14.2145 3.57139C14.1098 5.02387 13.0323 6.14278 11.8573 6.14278C10.6824 6.14278 9.60309 5.02423 9.50023 3.57139C9.39309 2.06034 10.442 1 11.8573 1C13.2727 1 14.3216 2.08784 14.2145 3.57139Z"
@@ -137,7 +137,7 @@
           <span>Membership Type</span>
         </a>
         <a class="hover:bg-black-50 text-black-700 hover:text-black-800 rounded-md transition-all text-lg font-medium flex items-center space-x-4 p-2"
-          href="#">
+          href="upcoming-projects.html">
           <svg class="h-6 w-6 stroke-black-700" viewBox="0 0 18 20" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M11.6667 10L7.93334 14.6667L6.33334 12.7967" stroke-width="2" stroke-linecap="round"
               stroke-linejoin="round" />
@@ -151,7 +151,7 @@
           <span>Upcoming Projects</span>
         </a>
         <a class="hover:bg-black-50 text-black-700 hover:text-black-800 rounded-md transition-all text-lg font-medium flex items-center space-x-4 p-2"
-          href="#">
+          href="about.html">
           <svg class="h-6 w-6 stroke-black-700" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
               d="M2.95538 9.59304C2.94092 9.82803 3.02457 10.0585 3.18639 10.2295C3.34821 10.4005 3.57371 10.4967 3.80914 10.4952L13.0651 10.4368C13.6677 10.4491 14.2667 10.3402 14.8264 10.1163C15.3903 9.89074 15.9025 9.55328 16.3323 9.12426C16.3525 9.10416 16.3716 9.08306 16.3896 9.06104C16.8134 8.54328 17.1264 7.94404 17.3092 7.30042C17.4917 6.65754 17.5405 5.98406 17.4526 5.32159C17.3073 4.18973 16.762 3.14711 15.9151 2.38212C15.0678 1.61664 13.9744 1.17969 12.8329 1.15028L12.811 1.15H6.565C6.33923 1.15 6.12274 1.23982 5.96327 1.39965C5.80381 1.55947 5.71449 1.77617 5.715 2.00194L5.72417 6.0156C4.87617 6.21158 4.23871 6.73226 3.80419 7.3194C3.2676 8.04445 2.99683 8.91948 2.95538 9.59304ZM12.1087 5.91698H10.3531L10.3505 5.34521H12.1087C12.1853 5.34521 12.2587 5.37562 12.3128 5.42973C12.3664 5.48337 12.3968 5.55597 12.3973 5.63178C12.3964 5.70735 12.3659 5.77959 12.3123 5.83294C12.2582 5.88676 12.185 5.91698 12.1087 5.91698Z"
@@ -163,7 +163,7 @@
           <span>About Us</span>
         </a>
         <a class="hover:bg-black-50 text-black-700 hover:text-black-800 rounded-md transition-all text-lg font-medium flex items-center space-x-4 p-2"
-          href="#">
+          href="contact.html">
           <svg class="h-6 w-6 stroke-black-700" viewBox="0 0 17 14" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
               d="M10.7154 1.13942H2.42873C2.04981 1.13942 1.6864 1.28994 1.41847 1.55788C1.15053 1.82582 1 2.18922 1 2.56815V11.1405C1 11.5195 1.15053 11.8829 1.41847 12.1508C1.6864 12.4187 2.04981 12.5693 2.42873 12.5693H14.3847C14.7636 12.5693 15.127 12.4187 15.395 12.1508C15.6629 11.8829 15.8134 11.5195 15.8134 11.1405V6.24713"
@@ -383,15 +383,15 @@
       <div class="py-6 md:py-0">
         <h3 class="text-xl text-brand-500">Sitemaps</h3>
         <ul class="space-y-2 pt-4 text-black-100 text-lg">
-          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline " href="#">Home</a>
+          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline " href="/">Home</a>
           </li>
-          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline " href="#">Action
+          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline " href="action-plan.html">Action
               Plan</a></li>
           <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
-              href="#">Membership Type</a></li>
-          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline " href="#">Upcoming
+              href="membership-type.html">Membership Type</a></li>
+          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline " href="upcoming-projects.html">Upcoming
               Projects</a></li>
-          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline " href="#">About
+          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline " href="about.html">About
               us</a></li>
           <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline " href="contact.html">Contact
               us</a></li>
